@@ -1,4 +1,4 @@
-/*	$OpenBSD: scard.h,v 1.7 2002/03/04 17:27:39 stevesk Exp $	*/
+/*	$OpenBSD: scard.h,v 1.8 2002/03/21 16:54:53 markus Exp $	*/
 
 /*
  * Copyright (c) 2001 Markus Friedl.  All rights reserved.
@@ -29,6 +29,8 @@
 #ifndef SCARD_H
 #define SCARD_H
 
+#include "key.h"
+
 #define SCARD_ERROR_FAIL	-1
 #define SCARD_ERROR_NOCARD	-2
 #define SCARD_ERROR_APPLET	-3
@@ -36,5 +38,6 @@
 Key	*sc_get_key(const char*);
 ENGINE	*sc_get_engine(void);
 void	 sc_close(void);
+int	 sc_put_key(Key *, const char*);
 
 #endif
