@@ -118,6 +118,12 @@
    - markus@cvs.openbsd.org 2002/03/21 16:38:06
      [scard.c]
      make compile w/ openssl 0.9.7
+   - markus@cvs.openbsd.org 2002/03/21 16:54:53
+     [scard.c scard.h ssh-keygen.c]
+     move key upload to scard.[ch]
+   - markus@cvs.openbsd.org 2002/03/21 16:57:15
+     [scard.c]
+     remove const
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
@@ -7964,4 +7970,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1958 2002/03/22 03:28:11 mouring Exp $
+$Id: ChangeLog,v 1.1959 2002/03/22 03:33:43 mouring Exp $
